# tub_feasibility_check

./: .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  SomaCerrt.cpp  Thread.cpp  Thread.h  Viewer.cpp  Viewer.h  example_call.sh  ifco_scene.cpp  ifco_scene.h  jacobian_controller.cpp  jacobian_controller.h  kinematics_check.cpp  package.xml  problem_statement.h  service_thread.cpp  service_thread.h  service_worker.cpp  service_worker.h  surface_grasp_sampling_orientation.sh  utilities.h  wall_grasp_no_sampling.sh  workspace_constraints.h  workspace_samplers.cpp  workspace_samplers.h
cfg/: KinematicsCheck.cfg
examples/: cerrt_example.sh  concerrt_surface_grasp_sampling_simple.sh  surface_grasp_sampling_orientation.sh  surface_grasp_sampling_orientation_with_required.sh  surface_grasp_sampling_simple.sh  tabletop_surface_grasp_sampling_orientation.sh  wall_grasp_no_sampling.sh  wall_grasp_required_collision.sh  wall_grasp_sampling_position.sh  wall_grasp_sampling_simple.sh
examples/combined_surface_grasp/: rotational_sampling.yaml  sampling_elongated_manifold.yaml  sampling_in_center.yaml  sampling_in_center_Z_not_downwards.yaml  sampling_near_wall.yaml  success_without_sampling.yaml
examples/combined_wall_grasp/: wall_grasp_sampling_needed.yaml  wall_grasp_without_sampling.yaml
examples/disney/: surface_grasp_call1.sh  surface_grasp_call3.sh  surface_grasp_call5.sh  surface_grasp_reference.sh  surface_grasp_sampling_orientation.sh  surface_grasp_sampling_simple.sh
examples/ocado/: surface_grasp_sampling_orientation.sh
launch/: disney_feasibility_check.launch  disney_feasibility_check_PisaIIT.launch  disney_feasibility_check_pisaiit.launch  disney_feasibility_check_reference.launch  disney_feasibility_check_reference_PisaIIT.launch  disney_feasibility_check_reference_RBOHand2.launch  ocado_feasibility_check.launch  tub_feasibility_check.launch
model/rlkin/: barrett-wam-ocado2.xml  barrett-wam-rbohand2.xml  prob-pisaiit-fingertips.xml  prob-pisaiit-palm.xml  prob-pisaiit.xml  prob-pisaiitsmall-fingertips.xml  prob-pisaiitsmall-palm-banana.xml  prob-pisaiitsmall-palm.xml  prob-rbohand2-heel.xml  prob-rbohand2-palm.xml  prob-rbohand2.xml  prob-rbohand2_dinseyValues.xml
model/rlmdl/: kuka-lbr-iiwa-14-r820.xml
model/rlsg/: ifco.wrl  iiwa14-rbohand2-ifco.convex.wrl  iiwa14-rbohand2-ifco.convex.xml  iiwa14-rbohand2-tabletop.convex.wrl  iiwa14-rbohand2-tabletop.convex.xml  prob-pisaiit-tabletop.convex.wrl  prob-pisaiit-tabletop.convex.xml  prob-rbohand2-ifco.convex.wrl  prob-rbohand2-ifco.convex.xml  prob-rbohand2-tabletop.convex.wrl  prob-rbohand2-tabletop.convex.xml  table.wrl  tabletop.wrl  wam-rbohand-ifco.convex.wrl  wam-rbohand-ifco.convex.xml  wam-rbohand2-ifco.convex.wrl  wam-rbohand2-ifco.convex.xml  wam-rbohand2-with-camera-ifco.convex.wrl  wam-rbohand2-with-camera-ifco.convex.xml  wam-rbohand2-with-camera-tabletop.convex.wrl  wam-rbohand2-with-camera-tabletop.convex.xml
model/rlsg/barrett-wam.convex/: barrett-wam-ocado2.wrl  barrett-wam-rbohand2-with-camera.wrl  barrett-wam-rbohand2.wrl  hand-ocado2.wrl  link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4-with-camera.wrl  link4.wrl  link5.wrl  link6.wrl  link7-hand-ocado2.wrl  link7-rbohand2.wrl  rbohand2_kinematics_check.wrl  rbohand_kinematics_check.wrl
model/rlsg/kuka-lbr-iiwa-14-r820.convex/: collision_kuka_mediaflange_convex.wrl  kuka-lbr-iiwa-14-r820-rbohand2.wrl  kuka-lbr-iiwa-14-r820-rbohand2.xml  link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl  link7_rbohand2.wrl  mediaflange_link7_rbohand2.wrl  rbohand2_kinematics_check.wrl
model/rlsg/prob.convex/: link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl  link6_PisaIIT.wrl  link6_RBOHand2.wrl  pisa_iit.wrl  pisa_iit_relaxed_thumb.wrl  prob-pisa_iit.wrl  prob-rbohand2.wrl
msg/: AllowedCollision.msg  BoundingBoxWithPose.msg  SurfaceGraspPregraspManifold.msg  WallGraspPregraspManifold.msg
notebooks/: surface-grasp-circular.ipynb  surface-grasp-elongated.ipynb  wall-grasp-manifold.ipynb
src/: MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h  allowed_collisions.cpp  allowed_collisions.h  bounding_box.h  check_kinematics_parameters.cpp  check_kinematics_parameters.h  collision_specification.cpp  collision_specification.h  collision_types.cpp  collision_types.h  ifco_scene.cpp  ifco_scene.h  jacobian_controller.cpp  jacobian_controller.h  kinematics_check.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manifold.cpp  manifold.h  pair_hash.h  process_table.cpp  process_table.h  service_worker.cpp  service_worker.h  soma_cerrt.cpp  soma_cerrt.h  soma_concerrt.cpp  soma_concerrt.h  surface_grasp_pregrasp_manifold.cpp  surface_grasp_pregrasp_manifold.h  tabletop_scene.cpp  tabletop_scene.h  usecase_scene.cpp  usecase_scene.h  utilities.h  workspace_checkers.cpp  (+3 more)
src/manifolds/: circular_manifold.cpp  circular_manifold.h  elongated_manifold.cpp  elongated_manifold.h  old_manifold.cpp  old_manifold.h  shared_functions.cpp  shared_functions.h  wall_grasp_manifold.cpp  wall_grasp_manifold.h
src/surface_pregrasp_manifolds/: circular_manifold.cpp  circular_manifold.h  elongated_manifold.cpp  elongated_manifold.h
srv/: CerrtExample.srv  CheckKinematics.srv  CheckKinematicsTabletop.srv  CheckSurfaceGrasp.srv  CheckWallGrasp.srv  VisualizeTrajectory.srv
test/: jacobian_controller.cpp  test_jacobian_controller.cpp  test_surface_pregrasp_manifolds.cpp  test_workspace_checker_and_sampler.cpp
